@@ -72,6 +72,13 @@ Windows
 
 - Issue #28896: Deprecate WindowsRegistryFinder and disable it by default.
 
+C API
+-----
+
+- Issue #29058: All stable API extensions added after Python 3.2 are now
+  available only when Py_LIMITED_API is set to the PY_VERSION_HEX value of
+  the minimum Python version supporting this API.
+
 Tests
 -----
 
